Fixed too large top margin

--- a/static/scss/includes/parts/_index.scss
+++ b/static/scss/includes/parts/_index.scss
@@ -25,7 +25,7 @@
 
         @media #{$small-height-and-down} {
             font-size  : 80px;
-            margin-top : 5%;
+            margin-top : 8px;
         }
 
     }
